src/test/ui/rfc-2093-infer-outlives/enum.stderr
error: rustc_outlives
  --> $DIR/enum.rs:7:1
   |
LL | / enum Foo<'a, T> {
LL | |     One(Bar<'a, T>)
LL | | }
   | |_^
   |
   = note: T : 'a

error: rustc_outlives
  --> $DIR/enum.rs:13:1
   |
LL | / struct Bar<'b, U> {
LL | |     field2: &'b U
LL | | }
   | |_^
   |
   = note: U : 'b

error: rustc_outlives
  --> $DIR/enum.rs:19:1
   |
LL | / enum Ying<'c, K> {
LL | |     One(&'c Yang<K>)
LL | | }
   | |_^
   |
   = note: K : 'c

error: aborting due to 3 previous errors

